# ocaml-polynomial

./: .gitignore  .gitlab-ci.yml  CHANGES.md  LICENSE  README.md  dune-project  polynomial-bench.opam  polynomial-sig.opam  polynomial.opam
js/: dune  test_js.ml
src/: dune  polynomial.ml  polynomial.mli  polynomial_bench.ml  polynomial_sig.ml  utils.ml  utils.mli
test/: bls_test.ml  dune  functors.ml  polynomial_pbt.ml  test_utils.ml  test_with_finite_field.ml
