opam-version: "2.0"
authors: [ "Danny Willems <be.danny.willems@gmail.com>" ]
maintainer: [ "Danny Willems <be.danny.willems@gmail.com>" ]
synopsis: "OCaml implementation of generic operations on polynomials"
homepage: "https://gitlab.com/dannywillems/ocaml-polynomial"
dev-repo: "git+https://gitlab.com/dannywillems/ocaml-polynomial.git"
bug-reports: "https://gitlab.com/dannywillems/ocaml-polynomial/issues"
license: "MIT"
depends: [
  "dune" {build & >= "2.0"}
  # Has not been tested with other Zarith versions.
  # The CI should verify it and it can then be extent
  "zarith" {build & = "1.9.1"}
  "alcotest" {with-test}
  "ff" {with-test & = "0.2.0"}
]
build: [[ "dune" "build" "-j" jobs "-p" name "@install" ]]
run-test: [[ "dune" "runtest" "-p" name "-j" jobs ]]
pin-depends: [
  ["ff.0.2.0" "git+https://gitlab.com/dannywillems/ocaml-ff.git#0.2.0"]
]
