(library
 (public_name polynomial)
 (libraries zarith ff-sig polynomial-sig)
 (modules polynomial)
 ; (ocamlopt_flags (:standard -g))
 (instrumentation (backend bisect_ppx))
 (name polynomial))

(library
 (public_name polynomial-sig)
 (modules polynomial_sig)
 (libraries zarith ff-sig)
 ; (ocamlopt_flags (:standard -g))
 (instrumentation (backend bisect_ppx))
 (name polynomial_sig))

(library
 (public_name polynomial-bench)
 (modules polynomial_bench)
 (libraries zarith ff-sig polynomial-sig core core_bench polynomial)
 (instrumentation (backend bisect_ppx))
 (name polynomial_bench))
